--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,9 +26,9 @@ jobs:
         run: pnpm install
 
       - name: Build
-        run: pnpm run build
         env:
-          NODE_ENV: production
+          BASE_PATH: '/${{ github.event.repository.name }}'
+        run: pnpm run build
 
       - name: Upload Artifacts
         uses: actions/upload-pages-artifact@v3
