Add new blog posts and enhance localization support
- Introduced new blog posts: "Digitization of Archaeological Collections", "New Discoveries from the Bronze Age", and "Medieval Hillfort - Research Results".
- Updated Czech and English localization files with new translations, including a "Back to blog" message.
- Refactored blog component to dynamically load posts based on locale.
- Adjusted layout and header components for improved user experience and language switching functionality.

--- a/project.inlang/settings.json
+++ b/project.inlang/settings.json
@@ -8,5 +8,5 @@
 		"pathPattern": "./messages/{locale}.json"
 	},
 	"baseLocale": "en",
-	"locales": ["en", "cs", "sk", "de", "pl", "fr", "it", "es", "ua"]
+	"locales": ["en", "cs"]
 }
