--- a/project.inlang/settings.json
+++ b/project.inlang/settings.json
@@ -7,6 +7,6 @@
 	"plugin.inlang.messageFormat": {
 		"pathPattern": "./messages/{locale}.json"
 	},
-	"baseLocale": "en",
-	"locales": ["en", "cs"]
+	"baseLocale": "cs",
+	"locales": ["cs", "en"]
 }
