--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,8 @@
 name: Build and Release
 
 on:
-  push:
-    tags:
-      - 'v*'  # Spustí se při push tagu začínajícího na 'v' (např. v1.0.0)
+  release:
+    types: [published]  # Spustí se když publikuješ release na GitHubu
 
 jobs:
   build-and-upload:
@@ -35,15 +34,12 @@ jobs:
       - name: Create ZIP archive
         run: |
           cd build
-          zip -r ../aiscr-home-${{ github.ref_name }}.zip .
+          zip -r ../aiscr-home-${{ github.event.release.tag_name }}.zip .
           cd ..
 
-      - name: Create Release with assets
+      - name: Upload ZIP to Release
         uses: softprops/action-gh-release@v2
         with:
-          files: aiscr-home-${{ github.ref_name }}.zip
-          generate_release_notes: true
-          draft: false
-          prerelease: false
+          files: aiscr-home-${{ github.event.release.tag_name }}.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
